refactor: 불변리스트 변환을 위해 Stream.toLsist() 사용